# spiderlightning

./: Cargo.toml
crates/slightfile/src/: resource.rs
crates/stupid/: Cargo.toml
crates/stupid/src/: lib.rs
examples/gpio-demo/: slightfile.toml
examples/gpio-demo/src/: main.rs
examples/stupid-demo/: Cargo.toml  slightfile.toml
examples/stupid-demo/src/: main.rs
src/commands/: run.rs
wit/: stupid.wit
