[package]
name = "slight-stupid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
slight-common = { workspace = true }
webbrowser = "0.8.10"
wit-bindgen-wasmtime = { workspace = true }
